[gd_scene load_steps=4 format=2]

[ext_resource path="res://uires/menu_shared/menu_shared_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://uires/menu_main/menu_main.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )
Button/colors/font_color = Color( 0, 0.541176, 0.858824, 1 )
Button/colors/font_color_disabled = Color( 0.541176, 0.858824, 1, 0.254902 )
Button/colors/font_color_hover = Color( 0, 0.705882, 0.858824, 1 )
Button/colors/font_color_pressed = Color( 0, 0.541176, 0.858824, 1 )
Button/constants/hseparation = 2
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null
Label/colors/font_color = Color( 0, 0.541176, 0.858824, 1 )
RichTextLabel/colors/default_color = Color( 0, 0.541176, 0.858824, 1 )

[node name="MenuMain" type="Control"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
theme = SubResource( 1 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.25
text = "INGENUITY MARS"
align = 1
valign = 1

[node name="Options" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="ButtonFreeFlight" type="Button" parent="Options"]
margin_right = 1728.0
margin_bottom = 79.0
text = "Free Flight"

[node name="ButtonTutorials" type="Button" parent="Options"]
margin_top = 83.0
margin_right = 1728.0
margin_bottom = 162.0
text = "Tutorials"

[node name="ButtonMissions" type="Button" parent="Options"]
margin_top = 166.0
margin_right = 1728.0
margin_bottom = 245.0
disabled = true
text = "Missions"

[node name="ButtonCredits" type="Button" parent="Options"]
margin_top = 249.0
margin_right = 1728.0
margin_bottom = 328.0
text = "Credits"

[node name="ButtonSettings" type="Button" parent="Options"]
margin_top = 332.0
margin_right = 1728.0
margin_bottom = 411.0
text = "Settings"

[node name="ButtonExit" type="Button" parent="Options"]
margin_top = 415.0
margin_right = 1728.0
margin_bottom = 494.0
text = "Exit"

[node name="LoadingNotice" type="Label" parent="."]
visible = false
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
text = "Loading, please wait. "
align = 1
autowrap = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
